# renta-es-crypt

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: historical_prices.md  tax_logic.md  transaction_sources.md
scripts/: kraken_export_anonymizer.py
src/: __init__.py  __main__.py  defaults.yaml
src/app/: cli.py  orchestrator.py  settings.py
src/engine/: __init__.py  fifo_engine.py  tax_rules.py  transfer_matcher.py
src/feeds/: __init__.py  cached_price_feed.py  coingecko_price_feed.py  cryptodatadownload_backfill.py  price_cache.py  price_feed_utils.py  stub_price_feed.py
src/model/: __init__.py  entities.py
src/parser/: __init__.py  common.py  kraken_csv_parser.py  registry.py
src/report/: __init__.py  csv_reporter.py
src/shared/: __init__.py  interfaces.py  pricing.py
tests/app/: test_cli.py  test_orchestrator.py  test_settings.py
tests/data/feeds/: Binance_SOLEUR_1h.csv
tests/data/parsers/: kraken_cli_sample.csv  kraken_ledger.csv  kraken_missing_price.csv
tests/data/scenarios/: fifo_non_staking_multi_lot.json  loss_no_repurchase_no_flag.json  loss_recent_original_lot_only_no_flag.json  loss_repurchase_after_flagged.json  (+5 more)
tests/engine/: test_sample_flow.py  test_scenario_datasets.py  test_tax_rules.py
tests/feeds/: test_cached_price_feed.py  test_coingecko_price_feed.py  test_cryptodatadownload_backfill.py  test_price_cache.py
tests/parser/: test_kraken_csv_parser.py
tests/report/: test_csv_reporter.py
tests/scripts/: test_kraken_export_anonymizer_script.py
